rename/rewrite: hyfileaccess

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,53 +1,40 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.20)
 
-project(deathtrap LANGUAGES CXX C)
+project(hyfileaccess LANGUAGES CXX C)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Core WebSockets Test Sql REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core WebSockets Test Sql REQUIRED)
+find_package(Qt5 COMPONENTS Core Sql REQUIRED)
 find_package(OpenSSL)
-
-include_directories(src)
-include_directories(3rdparty/mongoose)
 
 add_definitions(-DMG_ENABLE_SSL -DMG_SSL_IF=MG_SSL_IF_OPENSSL)
 
-set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
 
 add_library(mongoose
-    3rdparty/mongoose/mongoose.h
-    3rdparty/mongoose/mongoose.c
+    src/3rdparty/mongoose/mongoose.h
+    src/3rdparty/mongoose/mongoose.c
 )
+target_compile_definitions(mongoose PUBLIC MG_ENABLE_SSL MG_SSL_IF=MG_SSL_IF_OPENSSL)
+target_link_libraries(mongoose OpenSSL::SSL OpenSSL::Crypto)
 
-add_library(deathtrap
+add_library(hyfileaccess
     src/database.cpp
-    src/database.h
-    src/wsmessage.h
-    src/wsclient.cpp
-    src/wsclient.h
+    include/hyfileaccess/database.h
 )
-
-add_executable(deathtrap-api-server
-    src/wsserver.cpp
-    src/wsserver.h
-    src/apiserver_main.cpp
+target_include_directories(hyfileaccess PUBLIC include)
+set_target_properties(hyfileaccess PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
 )
+target_link_libraries(hyfileaccess PRIVATE Qt5::Core Qt5::Sql)
+add_library(hyfileaccess::hyfileaccess ALIAS hyfileaccess)
 
-add_executable(deathtrap-file-server
+add_executable(hyfileaccess-server
     src/fileserver_main.cpp
 )
-
-add_executable(deathtrap-tests
-    test/main.h
-    test/main.cpp
+set_target_properties(hyfileaccess-server PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
 )
-
-target_link_libraries(deathtrap PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::WebSockets Qt${QT_VERSION_MAJOR}::Test Qt${QT_VERSION_MAJOR}::Sql)
-target_link_libraries(deathtrap-api-server PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::WebSockets Qt${QT_VERSION_MAJOR}::Test Qt${QT_VERSION_MAJOR}::Sql deathtrap)
-target_link_libraries(deathtrap-file-server PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::WebSockets Qt${QT_VERSION_MAJOR}::Test Qt${QT_VERSION_MAJOR}::Sql deathtrap mongoose OpenSSL::SSL OpenSSL::Crypto)
-target_link_libraries(deathtrap-tests PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::WebSockets Qt${QT_VERSION_MAJOR}::Test Qt${QT_VERSION_MAJOR}::Sql deathtrap)
+target_link_libraries(hyfileaccess-server PRIVATE Qt5::Core Qt5::Sql hyfileaccess::hyfileaccess mongoose)
